[tool.poetry]
name = "indicodata-aiohttp_responses"
version = "1.4.2"
description = "proper aiohttp_responses lib"
authors = ["indico <engineering@indicodata.ai>"]
packages = [ {include = "aiohttp_responses"}]

[tool.poetry.dependencies]
python = ">=3.7"
aiohttp = ">=3.8.1"
pytest = ">=6.2.4"

[tool.poetry.dev-dependencies]
pytest-asyncio = ">=0.18.3"
typing_extensions = { version = "^4.1", python = "^3.7" }
black = {version = "^22.3.0", allow-prereleases = true}
isort = {version = "^5.10.1", allow-prereleases = true}
ipdb = {version = "^0.13.9", allow-prereleases = true}
flake8 = "^4.0.1"

[tool.pytest.ini_options]
addopts = "-ra -sv"
asyncio_mode = "auto"
testpaths = [
    "tests"
]

[tool.semantic_release]
version_variable = ["aiohttp_responses/__init__.py:__version__"]
version_toml = ["pyproject.toml:tool.poetry.version"]
branch = "main"
upload_to_respository=true
repository_url = "https://push.fury.io/indico"
build_command="poetry build"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
